[project]
name = "timing_benchmarks"
version = "0.1.0"
description = "Timing benchmarks for probabilistic programming frameworks"
authors = [{name = "GenJAX Team"}]
requires-python = ">=3.10"

[project.scripts]
timing-benchmarks = "timing_benchmarks.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "benchmarks/src"}

[tool.setuptools.packages.find]
where = ["benchmarks/src"]

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.12.*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
pandas = "*"
scipy = "*"

[tool.pixi.pypi-dependencies]
jax = ">=0.6.0,<0.7"
jaxlib = ">=0.6.0,<0.7"
numpyro = "*"
genjax = { path = "../..", editable = true }
tensorflow-probability = "*"

[tool.pixi.feature.cuda.system-requirements]
cuda = "12"

[tool.pixi.feature.cuda.target.linux-64.dependencies]
# CUDA-enabled JAX for GPU acceleration on linux-64
jaxlib = { version = ">=0.6.0,<0.7", build = "*cuda12*" }

[tool.pixi.feature.cuda.dependencies]
python = ">=3.10"
numpy = "*"
matplotlib = "*"
seaborn = "*"
pandas = "*"
scipy = "*"

[tool.pixi.feature.cuda.pypi-dependencies]
jax = ">=0.6.0,<0.7"
numpyro = "*"
genjax = { path = "../..", editable = true }
tensorflow-probability = "*"

[tool.pixi.feature.pyro.dependencies]
python = ">=3.10"
numpy = "*"
matplotlib = "*"
seaborn = "*"
pandas = "*"
scipy = "*"

[tool.pixi.feature.pyro.target.linux-64.dependencies]
pytorch = { version = ">=2.0", channel = "pytorch" }
pytorch-cuda = { version = "12.*", channel = "pytorch" }
torchvision = { version = "*", channel = "pytorch" }

[tool.pixi.feature.pyro.target.osx-arm64.dependencies]
pytorch = { version = ">=2.0", channel = "pytorch" }
torchvision = { version = "*", channel = "pytorch" }

[tool.pixi.feature.pyro.pypi-dependencies]
pyro-ppl = "*"

[tool.pixi.feature.torch.dependencies]
python = ">=3.10"
numpy = "*"
matplotlib = "*"
seaborn = "*"
pandas = "*"
scipy = "*"

[tool.pixi.feature.torch.target.linux-64.dependencies]
pytorch = { version = ">=2.0", channel = "pytorch" }
pytorch-cuda = { version = "12.*", channel = "pytorch" }

[tool.pixi.feature.torch.target.osx-arm64.dependencies]
pytorch = { version = ">=2.0", channel = "pytorch" }

[tool.pixi.feature.torch.pypi-dependencies]
setuptools = "*"

[tool.pixi.feature.torch.target.linux-64.pypi-dependencies]
triton = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
cuda = { features = ["cuda"], solve-group = "cuda" }
pyro = { features = ["pyro"], solve-group = "pyro" }
torch = { features = ["torch"], solve-group = "torch" }

[tool.pixi.tasks]
perfbench = "python main.py pipeline --mode cuda"
perfbench-cpu = "python main.py pipeline --mode cpu"
clean = "rm -rf data data_cpu figs figs_cpu"
